--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,13 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
+
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: ronikagram_production
+  username: ronikagram
+  password: <%= ENV["RONIKAGRAM_DATABASE_PASSWORD"] %>
